--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -8,6 +8,6 @@
   <% end %>
 </ul>
 
+<%= button_to 'Empty cart', @cart, method: :delete, confirm: 'Are you sure?' %>
 
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+
