--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,13 +1,21 @@
-<% if notice %><p id="notice"><%= notice %></p><% end %>
+<% if notice %>
+<p id="notice"><%= notice %></p>
+<% end %>
 
-<h2>Your Pragmatic Cart</h2>
+<div class="cart_title">Your Cart</div>
+<table>
 
-<ul>
-  <% @cart.line_items.each do |item| %>
-  <li><%= item.quantity %> &times; <%= item.product.title %>
-  <% end %>
-</ul>
+ <%= render(@cart.line_items) %>
+  <tr>
 
-<%= button_to 'Empty cart', @cart, method: :delete, confirm: 'Are you sure?' %>
+    <td colspan="3">Total</td>
+    <td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
+  </tr>
 
 
+
+
+</table>
+
+<%= button_to 'Empty cart', @cart, method: :delete,
+    confirm: 'Are you sure?' %>
